tests/ui/wf/wf-trait-bound.stderr
error[E0277]: the trait bound `U: Copy` is not satisfied
  --> $DIR/wf-trait-bound.rs:10:14
   |
LL |     where T: ExtraCopy<U>
   |              ^^^^^^^^^^^^ the trait `Copy` is not implemented for `U`
   |
note: required by a bound in `ExtraCopy`
  --> $DIR/wf-trait-bound.rs:7:19
   |
LL | trait ExtraCopy<T:Copy> { }
   |                   ^^^^ required by this bound in `ExtraCopy`
help: consider further restricting type parameter `U` with trait `Copy`
   |
LL |     where T: ExtraCopy<U>, U: std::marker::Copy
   |                          ++++++++++++++++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
